<resources>
    <string name="app_name">MyCloudwear</string>
    <string name="app_copyright">
        Copyright © 2019 BJTU Group 4. All Rights Reserved.
    </string>
    <string name="remember_me">
        Remember Me
    </string>
    <string name="phone">
        Phone
    </string>
    <string name="phone_hint">
        Phone Number
    </string>
    <string name="confirm">
        Confirm
    </string>
    <string name="password_hint">
        Password
    </string>
    <string name="change_password">
        Password
    </string>
    <string name="change_head_img">
        Change Photo
    </string>
    <string name="change_user_name">
        Change User Name
    </string>
    <string name="select_a_photo">
        Select a photo
    </string>
    <string name="select_from_album">
        Choose from Album
    </string>
    <string name="take_photo">
        Take Photo
    </string>
    <string name="delete_account">
        Delete Account
    </string>
    <string name="creat_account">
        Create an account
    </string>
    <string name="forget_pwd">
        Forgot Password?
    </string>
    <string name="login">
        Sign In
    </string>
    <string name="logout">
        Log Out
    </string>
    <string name="app_login">
        You have read and agree to our
    </string>
    <string name="enter_mobile_phone">
        Enter Your Mobile Number
    </string>
    <string name="enter_sms_phone">
        Enter the verification code
    </string>
    <string name="send_code">
        Send
    </string>
    <string name="next">
        Next
    </string>
    <string name="cancel">
        Cancel
    </string>
    <string name="reset_password">
        Set or Change Your Password
    </string>
    <string name="reset_password_success">
        Your password has been set successfully!
    </string>
    <string name="photo_management">
        Photo Management
    </string>
    <string name="settings">
        Settings
    </string>
    <string name="account_security">
        Personal Information
    </string>
    <string name="profile">
        Profile
    </string>
    <string name="general">
        General
    </string>
    <string name="about">
        About
    </string>
    <string name="version">
        Version 1.0.3
    </string>
    <string name="choose_gender">
        Choose your gender
    </string>
    <string name="help_and_feedback">
        Help &amp; Feedback
    </string>
    <string name="male">
        Male
    </string>
    <string name="female">
        Female
    </string>
    <string name="others">
        Others
    </string>
    <string name="height">
        Height
    </string>
    <string name="weight">
        Weight
    </string>
    <string name="update">
        Update
    </string>
    <string name="like">
        Like
    </string>
    <string name="dislike">
        Dislike
    </string>
    <string name="home">
        Home
    </string>
    <string name="photos">
        Photos
    </string>
    <string name="me">
        Me
    </string>
    <string name="name">
        Name
    </string>
    <string name="questions">
        All Questions
    </string>
    <string name="feedback">
        Feedback
    </string>
    <string name="language">
        Language
    </string>
    <string name="fresh">
        What\'s Fresh
    </string>
    <string name="version_update">
        Version Update
    </string>
    <string name="question_1">
        How do I delete my MyCloudwear account?
    </string>
    <string name="question_2">
        How do I manage the gallery?
    </string>
    <string name="delete_account_guide">
        Delete Account Guide
    </string>
    <string name="delete_photo_guide">
        Gallery Using Guide
    </string>
    <string name="terms_of_service">
        Terms of Service
    </string>
    <string name="privacy">
        Privacy Policy
    </string>
    <string name="and">
        and
    </string>
    <string name="Continue">
        Continue
    </string>
    <string name="latest_version">
        Already latest version
    </string>
    <string name="what_is_fresh">
        What\'s Fresh
    </string>
    <string name="login_successfully">
        Login successfully!
    </string>
    <string name="profile_update_successfully">
        Update successfully!
    </string>
    <string name="logout_successfully">
        Log out successfully!
    </string>
    <string name="verification_successfully">
        Successful verification!
    </string>
    <string name="update_preference_successfully">
        Update your preference successfully!
    </string>
    <string name="pwd_set_successfully">
        Your password has been set successfully!
    </string>
    <string name="login_fail">
        Login failed!\n The mobile phone number or Password entered is incorrect. Please try again!
    </string>
    <string name="msg_sent_fail">
        Message send failure!\nPlease try again later.
    </string>
    <string name="verification_fail">
        Unsuccessful verification!
    </string>
    <string name="HTTP_404">
        Requested HTML not found.
    </string>
    <string name="cannot_open_pic">
        Cannot get the requested picture.
    </string>
    <string name="url_error">
        URL cannot be opened.
    </string>
    <string name="io_error">
        IO ERROR.
    </string>
    <string name="network_error">
        Network Error!\nTry again later!
    </string>
    <string name="set_location">
        Location:
    </string>
    <string name="weather_update">
        Last updated at
    </string>
    <string name="wind_direction">
        Wind direction:
    </string>
    <string name="wind_level">
        level
    </string>
    <string name="weather">
        Weather:
    </string>
    <string name="humidity">
        Humidity:
    </string>
    <string name="phone_pwd_cannot_empty">
        The mobile phone number or password cannot be empty.
    </string>
    <string name="height_and_weight_cannot_empty">
        Height or weight cannot be empty!
    </string>
    <string name="pwd_cannot_empty">
        The password cannot be empty.
    </string>
    <string name="sms_code_incorrect">
        Your verification code is incorrect.
    </string>
    <string name="confirm_pwd_incorrect">
        Your confirm password is incorrect.
    </string>
    <string name="account_does_not_exist">
        Your account doesn\'t exist!
    </string>
    <string name="please_enter_phone_number">
        Please enter your mobile number!
    </string>
    <string name="please_enter_sms_code">
        Please enter your verification code.
    </string>
    <string name="phone_digit_incorrect">
        Your mobile number digits are incorrect.
    </string>
    <string name="code_has_sent">
        The code has been sent.
    </string>
    <string name="phone_has_registered">
        Your phone number has already been registered!
    </string>
    <string name="app_register">
        By using our app, you acknowledge that you have read and agree to our <a href='https://www.mycloudwear.com/WebLogin/docs/Privacy-EN.html'>Privacy Policy</a> and <a href='https://www.mycloudwear.com/WebLogin/docs/Terms-Of-Service-EN.html'>Terms of Service</a>.
    </string>
    <string name="not_receive_sms">
        Can\'t receive SMS verification code? Please contact to our team: support@mycloudwear.com.
    </string>
    <string name="password_warning">
        Password must be 8-16 characters and contain both numbers and letters/special characters.
    </string>
    <string name="set_pwd_later">
        If you don\'t want to set your password right now, you can click button "Cancel" and set it later.
    </string>
    <string name="email_contact">
        If you have any problems, we\'ll be ready to help you with our email (support@mycloudwear.com).
    </string>
    <string name="delete_account_warning">
        Deleting your account is permanent and will remove all content including match results and profile settings. Are you sure you want to delete your account?
    </string>
    <string name="refresh_success">
        Update completed
    </string>
    <string name="upload_success">
        Upload Success!
    </string>
    <string name="photo_size">
        Photo size should be less than 1.3 MB.
    </string>
    <string name="top">
        Tops
    </string>
    <string name="select">
        Select
    </string>
    <string name="notification">
        Notification
    </string>
    <string name="no_message">
        No Message
    </string>
    <string name="choose_skirt">
        Skirts
    </string>
    <string name="choose_pant">
        Pants
    </string>
    <string name="mycloudwear_id">
        MyCloudwear ID
    </string>
    <string name="ok">
        OK
    </string>
    <string name="Male">
        Male
    </string>
    <string name="Female">
        Female
    </string>
    <string name="Others">
        Others
    </string>
    <string name="camera">
        Camera
    </string>
    <string name="name_length">The length of name should be less than 20 characters</string>
    <string name="album">Album</string>
    <string name="password_length_incorrect">The length of password is incorrect</string>
    <string name="pwd_require_special_character">Password should contain at least one special character.</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="really_delete_photo">Do you really want to delete this picture?</string>
    <string name="delete_cancel">Delete Cancel</string>
    <string name="hello">Hello</string>
    <string name="update_result">We have updated the match results for you.</string>
    <string name="sd_card_not_available">The current memory card is not available!</string>
    <string name="please_open_permission">Qǐng dǎkāi quánxiàn! 6/5000 Please open the permission!</string>
    <string name="no_image_scanned">No images scanned</string>
    <string name="loading">Loading</string>
</resources>
