<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEEF6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#ECECEE"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/ib_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:paddingTop="20dp"
            android:src="@mipmap/toolbar_left" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="20dp"
            android:text="@string/help_and_feedback"
            android:textColor="#2A2A2A"
            android:textSize="18sp"
            android:typeface="sans" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/questions"
        android:textColor="@color/smssdk_gray"
        android:typeface="sans" />

    <Button
        android:id="@+id/btn_deleteAccountQ"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FEFFFF"
        android:drawableRight="@mipmap/right_click"
        android:gravity="center_vertical|center_horizontal|left"
        android:onClick="deleteAccountGuide"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:stateListAnimator="@null"
        android:text="@string/question_1"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/btn_deletePhotoQ"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FEFFFF"
        android:drawableRight="@mipmap/right_click"
        android:gravity="center_vertical|center_horizontal|left"
        android:onClick="deletePhotoGuide"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:stateListAnimator="@null"
        android:text="@string/question_2"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:typeface="sans" />
    <TextView
        android:id="@+id/text_feedback"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/feedback"
        android:textColor="@color/smssdk_gray"
        android:typeface="sans" />

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/email_contact"
        android:autoLink="web"
        android:textColor="@color/smssdk_gray"
        android:typeface="sans" />
</LinearLayout>